<resources>
    <string name="app_name">Friendship Bench Project</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="menu_appointments">Appointments</string>
    <string name="menu_healthworker">Healthworker</string>
    <string name="menu_conversations">Conversations</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_questionnaires">Questionnaires</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Logout</string>

    <string name="header_appointments">My appointments</string>
    <string name="header_healthworker">My healthworker</string>
    <string name="header_choose_healthworker">Choose healthworker</string>
    <string name="header_profile">My profile</string>
    <string name="header_new_questionnaire">New questionnaire</string>
    <string name="header_questionnaires">My questionnaires</string>
    <string name="header_about">About the Friendship Bench</string>
    <string name="header_conversation">My conversation</string>

    <string name="text_full_about">We try to reach out to people in Zimbabwe who are in need of help. Think about people who suffer from mental disorders, unwanted pregnancies or anything else that comes with (mental) problems. \n\nWe work with a SSQ-14, a question list which can determine if you are in need of help.</string>
    <string name="text_full_ssq14">By filling in this SSQ14 questionnaire, we can determine if you are in need of help.</string>

    <string name="website_url">http://www.friendshipbenchzimbabwe.org</string>

    <string name="button_more_information">More information</string>
    <string name="button_accept_appointment">Accept appointment</string>
    <string name="button_cancel_appointment">Cancel appointment</string>
    <string name="button_no">No</string>
    <string name="button_yes">Yes</string>
    <string name="button_update_profile">Update profile</string>
    <string name="button_choose_healthworker">Choose this healthworker</string>
    <string name="button_next_healthworker">Next healthworker</string>
    <string name="button_previous_healthworker">Previous healthworker</string>
    <string name="button_login">Login</string>
    <string name="button_new_account">Create new account</string>
    <string name="button_register">Register</string>
    <string name="button_use_existing_account">Login with an existing account</string>

    <string name="label_when">When:</string>
    <string name="label_where">Where:</string>
    <string name="label_who">Who:</string>
    <string name="label_status">Status:</string>
    <string name="label_name">Name:</string>
    <string name="label_firstname">Firstname:</string>
    <string name="label_lastname">Lastname:</string>
    <string name="label_address">Address:</string>
    <string name="label_streetname">Streetname:</string>
    <string name="label_number">Housenumber:</string>
    <string name="label_province">Province:</string>
    <string name="label_district">District:</string>
    <string name="label_email">Email:</string>
    <string name="label_age">Age:</string>
    <string name="label_gender">Gender:</string>
    <string name="label_birthday">Birthday:</string>
    <string name="label_username">Username:</string>
    <string name="label_password">Password:</string>
    <string name="label_password_confirmation">Password confirmation:</string>
    <string name="label_filter">Filter: </string>

    <string name="value_female">Female</string>
    <string name="value_male">Male</string>

    <string name="no_questionnaire_message">No questionnaires found.</string>
    <string name="no_appointment_message">No appointments found.</string>

    <string name="error_message">Sorry, something went wrong. Please try again later.</string>
    <string name="no_connection_message">No internet connection found.</string>
    <string name="no_password_username_provided">Please enter your username and password.</string>
    <string name="invalid_credentials">Invalid username/password combination.</string>
    <string name="fill_in_all_fields">Please fill in all the fields.</string>
    <string name="different_passwords">The entered passwords don\'t match.</string>
    <string name="succesfully_logged_in">Welcome!</string>
    <string name="succesfully_registered">We\'ve created your account. You can now log in.</string>
    <string name="need_healthworker">Before you can chat with someone, you have to choose a healthworker.</string>

    <string name="token_file_name">user_token</string>

</resources>
