<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_questionnaires"
            android:icon="@drawable/ic_menu_questionnaire"
            android:title="@string/menu_questionnaires" />
        <item
            android:id="@+id/nav_appointments"
            android:icon="@drawable/ic_menu_appointment"
            android:title="@string/menu_appointments" />
        <item
            android:id="@+id/nav_conversations"
            android:icon="@drawable/ic_menu_conversations"
            android:title="@string/menu_conversations" />
        <item
            android:id="@+id/nav_healthworker"
            android:icon="@drawable/ic_menu_healthworker"
            android:title="@string/menu_healthworker" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_close"
            android:title="@string/menu_logout" />
    </group>

</menu>
