<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            style="@style/FragmentPadding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/profileTextHeader"
                style="@style/FragmentTextHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/header_profile" />

            <LinearLayout
                style="@style/LinearLabelValueLayout">

                <TextView
                    android:id="@+id/profileNameLabel"
                    style="@style/LabelText"
                    android:text="@string/label_name" />

                <TextView
                    android:id="@+id/profileNameValue"
                    style="@style/ValueText" />
            </LinearLayout>

            <LinearLayout
                style="@style/LinearLabelValueLayout">

                <TextView
                    android:id="@+id/profileGenderLabel"
                    style="@style/LabelText"
                    android:text="@string/label_gender" />

                <TextView
                    android:id="@+id/profileGenderValue"
                    style="@style/ValueText" />
            </LinearLayout>

            <LinearLayout
                style="@style/LinearLabelValueLayout">

                <TextView
                    android:id="@+id/profileBirthdayLabel"
                    style="@style/LabelText"
                    android:text="@string/label_birthday" />

                <TextView
                    android:id="@+id/profileBirthdayValue"
                    style="@style/ValueText" />

            </LinearLayout>

            <LinearLayout
                style="@style/LinearLabelValueLayout">

                <TextView
                    android:id="@+id/profileAddressLabel"
                    style="@style/LabelText"
                    android:text="@string/label_address" />

                <TextView
                    android:id="@+id/profileAddressValue"
                    style="@style/ValueText" />

            </LinearLayout>

            <LinearLayout
                style="@style/LinearLabelValueLayout">

                <TextView
                    android:id="@+id/profileUsernameLabel"
                    style="@style/LabelText"
                    android:text="@string/label_username" />

                <TextView
                    android:id="@+id/profileUsernameValue"
                    style="@style/ValueText" />

            </LinearLayout>

            <LinearLayout
                style="@style/LinearLabelValueLayout">

                <TextView
                    android:id="@+id/profileEmailLabel"
                    style="@style/LabelText"
                    android:text="@string/label_email" />

                <TextView
                    android:id="@+id/profileEmailValue"
                    style="@style/ValueText" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/profileFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        app:useCompatPadding="true"
        android:src="@drawable/ic_create"
        android:tint="@color/white"
        app:elevation="4dp" />

</RelativeLayout>